Fix z-index issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -214,6 +214,7 @@ main {
   text-transform: uppercase;
   top: 0;
   width: 100vw;
+  z-index: 10;
   a {
     text-decoration: none;
   }
